[package]
name = "billing-notifier"
version = "0.1.0"
authors = ["Koichi <kou26haru@gmail.com>"]
edition = "2018"

[dependencies]
slack_api = "0.23.0"
rusoto_core = "0.45.0"
rusoto_ce = "0.45.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
chrono = "0.4"
anyhow = "1.0"
